macros/tests/gateway_config_nightly/expect-single-segment-path.stderr
error: a single path segment is expected
  --> $DIR/expect-single-segment-path.rs:17:13
   |
17 |             my::path::Api {
   |             ^^^^^^^^^^^^^
